objects/ssot__ForecastingItem__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BusinessPeriodId__c</fullName>
        <label>Business Period</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ForecastAmount__c</fullName>
        <label>DoNotUseForecastAmount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ForecastAmt__c</fullName>
        <label>Forecast Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ssot__ForecastQuantity__c</fullName>
        <label>Forecast Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ForecastingGroupItemId__c</fullName>
        <label>Forecasting Group Item</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ForecastingGroupItem__c</fullName>
        <label>Forecasting Group Item</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ForecastingItemCategory__c</fullName>
        <label>Forecasting Item Category</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ForecastingTypeId__c</fullName>
        <label>Forecasting Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HasAdjustment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__HasOwnerAdjustment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Owner Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Forecasting Item Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsAmount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsQuantity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OpportunityForecastCategory__c</fullName>
        <label>Opportunity Forecast Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerId__c</fullName>
        <label>Owner</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerOnlyAmount__c</fullName>
        <label>DoNotUseOwnerOnlyAmount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerOnlyAmt__c</fullName>
        <label>Owner Only Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerOnlyQuantity__c</fullName>
        <label>Owner Only Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ParentForecastingItemId__c</fullName>
        <label>Parent Forecasting Item</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductFamily__c</fullName>
        <label>Product Family</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuotaAmount__c</fullName>
        <label>DoNotUseQuotaAmount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__QuotaAmt__c</fullName>
        <label>Quota Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ssot__QuotaQuantity__c</fullName>
        <label>Quota Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SalesTerritoryId__c</fullName>
        <label>Sales Territory</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SystemModstamp__c</fullName>
        <label>System Mod stamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__WithoutAdjustmentsAmount__c</fullName>
        <label>DoNotUseWithoutAdjustmentsAmount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__WithoutAdjustmentsAmt__c</fullName>
        <label>Without Adjustments Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ssot__WithoutAdjustmentsQuantity__c</fullName>
        <label>Without Adjustments Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__WithoutManagerAdjustmentAmount__c</fullName>
        <label>DoNotUseWithoutManagerAdjustmentAmount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__WithoutManagerAdjustmentAmt__c</fullName>
        <label>Without Manager Adjustment Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ssot__WithoutManagerAdjustmentQuantity__c</fullName>
        <label>Without Manager Adjustment Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__WithoutOwnerAdjustmentAmount__c</fullName>
        <label>DoNotUseWithoutOwnerAdjustmentAmount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__WithoutOwnerAdjustmentAmt__c</fullName>
        <label>Without Owner Adjustment Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ssot__WithoutOwnerAdjustmentQuantity__c</fullName>
        <label>Without Owner Adjustment Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
</CustomObject>